[project]
name = "comfyui-scstepfun"
description = "To use stepfun's library, you need an official api that supports multimodal inputs such as video and pictures https://platform.stepfun.com/request-restriction"
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = ["openai"]

[project.urls]
Repository = "https://github.com/chenbaiyujason/ComfyUI-StepFun"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shichen"
DisplayName = "ComfyUI-SCStepFun"
Icon = ""
